[package]
name = "cargo-exec"
version = "0.1.0"
authors = ["pefish <pefish@qq.com>"]
edition = "2018"
description = "`npm run test` for Rust"
repository = "https://github.com/pefish/cargo-exec"
readme = "README.md"
license = "MIT OR Apache-2.0"


[dependencies]
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"

[package.metadata.scripts]
test = "echo test"
